--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@
     <button onclick="mostrarMensagem()">Mostrar Mensagem 🎉</button>
 
     <div id="mensagem">
-      <p>"Valeu por sempre estar junto nas horas boas e ruins! Saiba que pode contar comigo pra qualquer coisa! 🤝</p>
-</p>O amigo ama em todos os momentos; é um irmão na adversidade."</p>
+      <p>Valeu por sempre estar junto nas horas boas e ruins! Saiba que pode contar comigo pra qualquer coisa! 🤝</p>
+</p>O amigo ama em todos os momentos; é um irmão na adversidade.</p>
+    </p>Provérbios 18:24</p>
       <div class="destaque">⭐🎮🍻</div>
     </div>
   </div>
